@@ -5,6 +5,10 @@ phpMyAdmin - ChangeLog
 $Id$
 $Source$
 
+2006-09-29 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/grab_globals.lib.php: fix attack via _FILES,
+      thanks to Stefan Esser
+
 2006-09-27 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/common.lib.php, /session.inc.php, /url_generating.lib.php:
       security fixes (announcement will come later),
